continue integration testing with shoppingcartitemservice and shoppingcart service